tests/cases/scc/error/0030-krtypes.c
//!necc-dbg @ -ir

static void foo()
{
}

void bar();

int main()
{
	foo(0);
	bar(0);
	return 0;
}
